compiler/src/test/resources/amyc/typer/failing/ConstructorError1.amy
object ConstructorError
  abstract class Foo 
  case class Bar(i: Int) extends Foo

  Bar(true)
end ConstructorError
